Fix T87283: crash with persistent data and motion blur